# RenameFiles

./: .gitignore  CMakeLists.txt  README.md  lbuild.sh  mbuild.sh  wbuild.bat
Exes/: lRenameFiles  mRenameFiles
Src/: CMakeLists.txt  Main.cpp  Parser.cpp  Parser.h  RenameFiles.cpp  RenameFiles.h
